Criado sistema de mensagem

--- a/.env
+++ b/.env
@@ -1,2 +1,13 @@
 SECRET_KEY = django-insecure-xaa*5&gok*ejnoh@36z05i3y=^_j(jkxdbhtd3gyy5uirynw30
 API_KEY = AIzaSyCCij8LY9c1TSgOrAshkFQl3b0WLDebtpo
+
+
+
+
+
+EMAIL_HOST_USER = 'danilolesgal@gmail.com'
+EMAIL_HOST_PASSWORD = 'zqeuzyvnnqtigpih'
+EMAIL_USE_TLS=True
+EMAIL_PORT=587
+EMAIL_HOST=smtp.gmail.com
+DEFAUT_FROM_EMAIL = "danilorodrsantos@hotmail.com"
